--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -209,7 +209,7 @@
   }
   .career-section {
     padding-top: 90px;
-    margin-top: -70px;
+    margin-top: 0px;
 
     align-items: start;
     place-items: inherit;
